# orchestrator_workflow

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
schema/: app.py
services/: celery_app.py  queue_service.py  tavily_search.py  worker_service.py
src/: docx_generator.py  nodes.py  pdf_generator.py  schema.py  state.py  workflow.py
src/node/: llm_call.py  orchestrator.py  synthesizer.py
src/routes/: generate.py  sse.py
src/tools/: web_search.py
utils/: constant.py  llm_planner.py
utils/prompts/: llm_prompt.py  orchestrator_prompt.py
