[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "markdown>=3.10.2",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
]
