[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "groq<1",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
    "markdown>=3.10.2",
    "python-multipart>=0.0.26",
    "python-docx>=1.1.2",
    "redis>=5.0.3,<6.5",
    "reportlab>=4.4.10",
    "sse-starlette>=3.4.4",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
]
